# FactorLanguageBuild

./: GNUmakefile  factorStack
build-support/: factor.sh
vm/: CMakeLists.txt
